--- a/index.html
+++ b/index.html
@@ -4,29 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ask Jon Perry a Question</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            background-color: #fff;
+            padding: 20px 30px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            max-width: 500px;
+            width: 100%;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+        input[type="email"],
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        textarea {
+            resize: vertical;
+            height: 100px;
+        }
+        button,
+        input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            background-color: #007bff;
+            color: #fff;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover,
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <h1>Ask Jon Perry a Question for 5 Bucks</h1>
-    <form id="question-form" action="https://formspree.io/YOUR_EMAIL@DOMAIN.COM" method="POST">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-        
-        <label for="question">Your Question:</label>
-        <textarea id="question" name="question" required></textarea><br><br>
-        
-        <input type="hidden" name="_next" value="YOUR_PAYPAL_THANKYOU_PAGE_URL">
-        <button type="submit">Submit</button>
-    </form>
+    <div class="container">
+        <h1>Ask Jon Perry a Question for 5 Bucks</h1>
+        <form id="question-form" action="https://formspree.io/YOUR_EMAIL@DOMAIN.COM" method="POST">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
 
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-        <input type="hidden" name="cmd" value="_xclick">
-        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL">
-        <input type="hidden" name="item_name" value="Ask Jon Perry a Question">
-        <input type="hidden" name="amount" value="5.00">
-        <input type="hidden" name="currency_code" value="USD">
-        <input type="hidden" name="return" value="YOUR_THANKYOU_PAGE_URL">
-        <input type="hidden" name="cancel_return" value="YOUR_CANCEL_PAGE_URL">
-        <input type="submit" value="Pay $5">
-    </form>
+            <label for="question">Your Question:</label>
+            <textarea id="question" name="question" required></textarea>
+
+            <input type="hidden" name="_next" value="YOUR_PAYPAL_THANKYOU_PAGE_URL">
+            <button type="submit">Submit</button>
+        </form>
+
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+            <input type="hidden" name="cmd" value="_xclick">
+            <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL">
+            <input type="hidden" name="item_name" value="Ask Jon Perry a Question">
+            <input type="hidden" name="amount" value="5.00">
+            <input type="hidden" name="currency_code" value="USD">
+            <input type="hidden" name="return" value="YOUR_THANKYOU_PAGE_URL">
+            <input type="hidden" name="cancel_return" value="YOUR_CANCEL_PAGE_URL">
+            <input type="submit" value="Pay $5">
+        </form>
+    </div>
 </body>
 </html>
