--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: #121212;
+            color: #e0e0e0;
             margin: 0;
             padding: 0;
             display: flex;
@@ -17,9 +17,9 @@
             height: 100vh;
         }
         .container {
-            background-color: #fff;
+            background-color: #1e1e1e;
             padding: 20px 30px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             border-radius: 10px;
             max-width: 500px;
             width: 100%;
@@ -39,8 +39,10 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
-            border: 1px solid #ccc;
+            border: 1px solid #333;
             border-radius: 5px;
+            background-color: #333;
+            color: #e0e0e0;
         }
         textarea {
             resize: vertical;
@@ -51,7 +53,7 @@
             width: 100%;
             padding: 10px;
             border: none;
-            background-color: #007bff;
+            background-color: #6200ee;
             color: #fff;
             font-size: 16px;
             border-radius: 5px;
@@ -59,7 +61,7 @@
         }
         button:hover,
         input[type="submit"]:hover {
-            background-color: #0056b3;
+            background-color: #3700b3;
         }
     </style>
 </head>
